--- a/.github/workflows/build-and-push-simple.yml
+++ b/.github/workflows/build-and-push-simple.yml
@@ -1,4 +1,7 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image (Simple)
+
+# Simplified version without attestations
+# Use this if you encounter permission issues with the main workflow
 
 on:
   push:
@@ -21,8 +24,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
-      attestations: write
 
     steps:
       - name: Checkout repository
@@ -53,7 +54,6 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
-        id: docker-build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -64,10 +64,6 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
 
-      - name: Generate artifact attestation
+      - name: Image digest
         if: github.event_name != 'pull_request'
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.docker-build.outputs.digest }}
-          push-to-registry: true
+        run: echo "Image pushed with digest ${{ steps.build.outputs.digest }}"
