--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,19 @@
 # Copy this file to .env and fill in your values
 
 # Domain Configuration
-DOMAIN=treestandk.com
+DOMAIN=yourdomain.com
 
 # Cloudflare Configuration
 CF_API_TOKEN=your_cloudflare_api_token_here
 CF_ZONE_ID=your_cloudflare_zone_id_here
 
 # Nginx Proxy Manager Configuration
-NPM_API_URL=http://192.168.1.100:81/api
+NPM_API_URL=http://nginx-proxy-manager:81/api
 NPM_EMAIL=admin@example.com
 NPM_PASSWORD=changeme
 
 # UniFi Configuration
-UNIFI_URL=https://192.168.1.1
+UNIFI_URL=https://unifi-controller:8443
 UNIFI_USER=admin
 UNIFI_PASS=changeme
 UNIFI_SITE=default
