--- a/truenas/questions.yaml
+++ b/truenas/questions.yaml
@@ -14,11 +14,11 @@ questions:
   # Basic Configuration
   - variable: config.domain
     label: "Domain Name"
-    description: "Your base domain (e.g., treestandk.com)"
+    description: "Your base domain (e.g., yourdomain.com)"
     group: "Configuration"
     schema:
       type: string
-      default: "treestandk.com"
+      default: "yourdomain.com"
       required: true
 
   # Cloudflare Configuration
@@ -42,7 +42,7 @@ questions:
   # Nginx Proxy Manager Configuration
   - variable: config.npm.apiUrl
     label: "NPM API URL"
-    description: "Nginx Proxy Manager API URL (e.g., http://192.168.1.100:81/api)"
+    description: "Nginx Proxy Manager API URL (e.g., http://nginx-proxy-manager:81/api)"
     group: "Configuration"
     schema:
       type: string
@@ -68,7 +68,7 @@ questions:
   # UniFi Configuration
   - variable: config.unifi.url
     label: "UniFi Controller URL"
-    description: "UniFi Controller URL (e.g., https://192.168.1.1)"
+    description: "UniFi Controller URL (e.g., https://unifi-controller:8443)"
     group: "Configuration"
     schema:
       type: string
