--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 Flask==3.0.0
-requests==2.31.0
-Werkzeug==3.0.1
+requests==2.32.4
+Werkzeug==3.0.6
+cryptography==42.0.5
+bcrypt==4.1.2
+Flask-WTF==1.2.1
+Flask-Limiter==3.5.0
+flask-socketio==5.3.6
+python-socketio==5.11.1
+eventlet==0.35.2
+python3-saml==1.16.0
